# phron

./: Cargo.toml  LICENSE  README.md  config.toml.example
bot/: main.rs
launchd/: com.phron.bot.plist  com.phron.nudge.plist  com.phron.overnight.plist
scripts/: audio_analysis.py  setup-config.sh  setup-keychain.sh
src/: config.rs  lib.rs  main.rs  state.rs
src/clients/: audio.rs  llm.rs  mod.rs  openrouter.rs  oura.rs  telegram.rs  vault.rs  whisper.rs
src/commands/: brief.rs  health.rs  mod.rs  nudge.rs  overnight.rs  status.rs
